	PR tree-optimization/45059 	* tree-ssa-reassoc.c (eliminate_redundant_comparison): Strip useless 	type conversions from newop{1,2}.  Assert t is a comparison and 	newop{1,2} after the stripping are gimple vals.

* gcc.c-torture/compile/pr45059.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@163539 138bc75d-0d04-0410-961f-82ee72b054a4